--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,10 @@
 title: Moexin&#039;s Blog
 email: i@lmeoo.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Copyright @ 2017 <a href="http://blog.lmeoo.com/">Moexin's Blog</a> | 
+  <a target="_blank" href="http://www.miitbeian.gov.cn/">桂ICP备16001758号-1</a> | 
+  Powered by <a href="//lmeoo.com" target="_blank">Moexin</a> | 
+  <a target="_blank" href="//uptime.statuscake.com/?TestID=EYMY0A1xb7">Monitor</a>
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://blog.lmeoo.com" # the base hostname & protocol for your site
 twitter_username: Amoeorz
