--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,12 @@
 # Site settings
 title: Moexin&#039;s Blog
 email: i@lmeoo.com
+description:
+  Copyright @ 2017 <a href="http://blog.lmeoo.com/">Moexin's Blog</a> | 
+  <a target="_blank" href="http://www.miitbeian.gov.cn/">桂ICP备16001758号-1</a> | 
+  Powered by <a href="//lmeoo.com" target="_blank">Moexin</a> | 
+  <a target="_blank" href="//uptime.statuscake.com/?TestID=EYMY0A1xb7">Monitor</a>
+url: "http://blog.lmeoo.com"
 twitter_username: Amoeorz
 github_username:  Moexin
 
